--- a/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
@@ -59,4 +59,29 @@
         db.Close();
         return null;
     }
+    public static void DeleteLeraar(int id, string user)
+    {
+        var db = Database.Open(App.DataBase);
+        var userDb = Database.Open(App.AuthDataBase);
+        var deleteCommand = "DELETE FROM Gebruiker WHERE UserId = @0";
+        var deleteLeraar = "DELETE FROM Leraar WHERE UserId = @0";
+        var deleteMailontvanger = "DELETE FROM MailOntvanger WHERE UserId = @0";
+        db.Execute(deleteCommand, id);
+        db.Execute(deleteLeraar, id);
+        db.Execute(deleteMailontvanger);
+        var data = db.Query("SELECT * FROM Voorlichting Voor INNER JOIN Leraar Lera ON Voor.UserId = Lera.UserId");
+        foreach(var row in data)
+        {
+            VoorlichtingRepo.DeleteVoorlichting(row.VoorlichtingId);
+        }
+        var userRoles = Roles.GetRolesForUser();
+        if (userRoles.Count() > 0)
+        {
+            Roles.RemoveUserFromRoles(user, userRoles); // deletes records from webpages_UsersInRoles table
+        }
+        ((SimpleMembershipProvider)Membership.Provider).DeleteAccount(user); // deletes record from webpages_Membership table
+        ((SimpleMembershipProvider)Membership.Provider).DeleteUser(user, true); // deletes record from UserProfile table
+        db.Close();
+        userDb.Close();
+    }
 }
