--- a/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Page.Title= "Keuze";
     Layout = "~/_Layout.cshtml";
-
+    int id = Convert.ToInt16(Request.QueryString["id"]);
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
         Response.Redirect("~/");
@@ -9,3 +9,10 @@
 }
 
 @RenderPage("~/Leerling/_LeerlingDetails.cshtml")
+
+@if (User.IsInRole("Admin"))
+{
+    <a href="~/Admin/Leerling/LeerlingWijzigen?id=@id" class="btn btn-default">
+        <span class="glyphicon glyphicon-pencil"></span> Edit
+    </a>
+}
