--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -19,7 +19,8 @@
 <table class="table" style="margin-top: 16px;">
     <thead>
         <tr>
-            <th colspan="2">Gebruikersnaam</th>
+            <th>Gebruikersnaam</th>
+            <th>Details</th>
         </tr>
     </thead>
     <tbody>
@@ -28,7 +29,7 @@
         <tr>  
             <td>@decaan.Item2</td>
             <td>
-                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Aanpassen</a>
+                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Wijzig</a>
             </td>
         </tr>
     }
