--- a/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
@@ -10,20 +10,28 @@
     List<LeraarRepo.Leraar> leraren = LeraarRepo.GetLeraren(); // Geeft het ID en username van alle decanen mee
 }
 
-<a class="btn btn-default" href="~/Decaan/Leraar/LeraarToevoegen">
-    <span class="glyphicon glyphicon-pencil"></span> Nieuwe leraar aanmaken
+<h2>Lerarenoverzicht</h2>
+
+<a class="btn btn-success" href="~/Decaan/Leraar/LeraarToevoegen">
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leraar aanmaken
 </a>
 
-<table class="table">
-    @foreach (LeraarRepo.Leraar leraar in leraren)
-    {
+<table class="table" style="margin-top: 16px;">
+    <thead>
         <tr>
-            <td>
-                <a href="~/Decaan/Leraar/LeraarWijzigen?id=@leraar.UserId" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil"></span> Edit
-                </a>
-            </td>
-            <td>@leraar.Voornaam</td> <td>@leraar.Achternaam</td>
+            <th>Voornaam</th>
+            <th>Achternaam</th>
+            <th>Details</th>
         </tr>
-    }
+    </thead>
+    <tbody>
+        @foreach (LeraarRepo.Leraar leraar in leraren)
+        {
+        <tr>
+            <td>@leraar.Voornaam</td>
+            <td>@leraar.Achternaam</td>
+            <td><a href="~/Decaan/Leraar/LeraarWijzigen?id=@leraar.UserId">Wijzig</a></td>
+        </tr>
+        }
+    </tbody>
 </table>
