--- a/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
@@ -10,23 +10,28 @@
     List<VakRepo.Vak> vakken = VakRepo.GetVakken();
 }
 
-<br>
+<h2>Vakoverzicht</h2>
 
-<a class="btn btn-default" href="~/Decaan/Vak/VakToevoegen">
-    <span class="glyphicon glyphicon-pencil"></span> Nieuw vak aanmaken
+<a class="btn btn-success" href="~/Decaan/Vak/VakToevoegen">
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuw vak aanmaken
 </a>
 
-<table class="table">
-    @foreach (VakRepo.Vak vak in vakken)
-    {
+<table class="table" style="margin-top: 16px;">
+    <thead>
         <tr>
-            <td>
-                <a href="~/Decaan/Vak/VakWijzigen?id=@vak.VakId" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil"></span> Edit
-                </a>
-            </td>
+            <th>Vak</th>
+            <th>Niveau</th>
+            <th>Details</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (VakRepo.Vak vak in vakken)
+        {
+        <tr>
             <td>@vak.VakNaam</td>
             <td>@vak.Niveau</td>
+            <td><a href="~/Decaan/Vak/VakWijzigen?id=@vak.VakId">Wijzig</a></td>
         </tr>
     }
+    </tbody>
 </table>
