--- a/ComeniusCarrousel/_AppStart.cshtml
+++ b/ComeniusCarrousel/_AppStart.cshtml
@@ -13,4 +13,19 @@
 
     /*var db = Database.Open(App.DataBase);
     db.Execute("DELETE FROM .. WHERE ..")*/;
+
+    // Initialize WebMail helper
+        WebMail.SmtpServer = "127.0.0.1";
+        WebMail.SmtpPort = 25;
+        WebMail.UserName = "Sev7n";
+        WebMail.EnableSsl = false;
+        WebMail.Password = "David";
+        WebMail.From = "user@domain.com";
+        /* Commenius Gegevens
+            smtp.Host = "ex2013.csg-comenius.nl";
+            smtp.Port = 578;
+            Username  = "profielkeuze@csg-comenius.nl";
+            Password  = "Blaatschaap10";
+
+        */
 }
