--- a/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
@@ -27,7 +27,7 @@
             {
                 <td>
                     <a href="~/Decaan/Klas/KlasWijzigen?id=@klas.KlasId" class="btn btn-default">
-                        <span class="glyphicon glyphicon-pencil"></span> Edit
+                        <span class="glyphicon glyphicon-pencil"></span> Verwijderen
                     </a>
                 </td>
             }
