--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
@@ -22,7 +22,7 @@
         <tr>
             <td>
                 <a href="~/Decaan/Lokaal/LokaalWijzigen?id=@lokaal.LokaalId" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil"></span> Edit
+                    <span class="glyphicon glyphicon-pencil"></span> Verwijderen
                 </a>
             </td>
             <td>@lokaal.LokaalNaam</td>
