--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
@@ -29,6 +29,6 @@
     <input type="text" name="lokaalNaam"><br>
     <input type="number" name="capaciteit" min="1" value="30"><br>
     <button type="submit" id="submit" name="lokaalToevoegen" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Verzenden
+        <span class="glyphicon glyphicon-plus"></span> Toevoegen
     </button>
 </form>
