--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     /*Dit is de Mail Overzicht Pagina van de Decaan. Op deze Pagina krijgt de decaan een overzicht te zien van onderwerpen van mails die reeds gemaakt zijn. Ook krijgt de decaan de mogelijkheid om deze mails aan te passen of te verwijderen vanaf deze pagina, naast dat er een redirect knop is richting een pagina om een nieuw e-mail ontwerp te maken voor een ander onderwerp.*/
 
-
+    Page.Title= "Mail overzicht";
     Layout = "~/_Layout.cshtml";
     // Connectie Database
     var db = Database.Open("ComeniusCarrousel");
