--- a/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
@@ -22,7 +22,7 @@
         <tr>
             <td>
                 <a href="~/Decaan/Vak/VakWijzigen?id=@vak.VakId" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil"></span> Edit
+                    <span class="glyphicon glyphicon-pencil"></span> Verwijderen
                 </a>
             </td>
             <td>@vak.VakNaam</td>
