--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -157,6 +157,6 @@
     </br>
     <input type="text" name="mailVerzorger" placeholder="voorbeeld@mail.frl" value="@leerling.MailVerzorger" class="form-control" style="width: 100%; margin-top: 8px;">
     <button type="submit" id="submit" name="submitKeuze" class="btn btn-success" style="float: right; margin-top: 16px;">
-        <span class="glyphicon glyphicon-ok"></span>&nbsp; Verzenden
+        <span class="glyphicon glyphicon-ok"></span>&nbsp; Keuze Verzenden
     </button>
 </form>
