--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -28,7 +28,7 @@
         <tr>  
             <td>@decaan.Item2</td>
             <td>
-                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Aanpassen</a>
+                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Verwijderen</a>
             </td>
         </tr>
     }
