Revert naar laatste commit Alai

--- a/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
@@ -185,7 +185,7 @@
                 @Html.ValidationMessage("talentstroom")
             </div>
             <div class="from-group">
-                <button type="submit" class="btn btn-default">Toevoegen</button>
+                <button type="submit" class="btn btn-default">Registreer</button>
             </div>
         </fieldset>
     </form>
