--- a/ComeniusCarrousel/Decaan/Klas/KlasToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasToevoegen.cshtml
@@ -25,6 +25,6 @@
     @Html.ValidationSummary()
     <input type="text" name="klasNaam"><br>
     <button type="submit" id="submit" name="klasToevoegen" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Toevoegen
+        <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
 </form>
