--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     //Deze pagina is bedoeld om nieuwe mails te maken voor bepaalde onderwerpen (Verzenden Userdata, Reminder voor aanmelden, Verzenden Persoonlijk Rooster). De gemaakte mails zullen verschijnen in de Mail Database en opgehaald worden in MailOverzicht.cshtml, waar ze ook gewijzigd kunnen worden. Ze zullen uiteindelijk op de verzend pagina verzonden kunnen worden aan de juiste doelgroep.
     
-    Page.Title= "Mail toevoegen";
+    Page.Title= "Keuze";
     Layout = "~/_Layout.cshtml";
 
     var inhoud = "";
@@ -58,6 +58,6 @@
     </div>
     
     <button type="submit" id="submit" name="submitNewMail" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Toevoegen
+        <span class="glyphicon glyphicon-plus"></span> Submit
     </button>
 </form>
