--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -47,17 +47,10 @@
          <input type="text" name="onderwerp" value="@onderwerp" />
     </p>
 
-    <p>
+    <div>
         Aan:
-        <select name ="ontvanger">
-        <option value="Leerlingen">Leerlingen</option>
-        <option value="leraren">Leraren</option>
-        <option value="niveau">Niveau</option>
-        <option value="klas">Klas</option>
-        <option value="aangemeld">Aangemeld</option>
-        <option value="nietAangemeld">Niet Aangemeld</option>
-        <option value="individu">Individu</option>
-        </select>
+        <input type="text" name="ontvanger" />
+    </div>
 
     <p><label for="inhoud">Inhoud:</label>
          <input type="text" name="inhoud" value="@inhoud" />
