--- a/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
@@ -32,6 +32,6 @@
         <option value="VWO">VWO</option>
     </select><br>
     <button type="submit" id="submit" name="vakToevoegen" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Toevoegen
+        <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
 </form>
