--- a/ComeniusCarrousel/Admin/Leerling/BulkLeerlingenToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/BulkLeerlingenToevoegen.cshtml
@@ -145,7 +145,7 @@
                   placeholder="Voornaam|Achternaam|Leerlingnummer|Mail|Wachtwoord|Klas|Niveau|Talentstroom vak|Instroomleerling(True/False)"
                   maxlength="4000"></textarea>
         <button type="submit" id="submit" name="leerlingenToevoegen" class="btn btn-success">
-            <span class="glyphicon glyphicon-plus"></span> Toevoegen
+            <span class="glyphicon glyphicon-plus"></span> Verzenden
         </button>
     </form>
 </div>
