--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Leraar toevoegen ";
+    Page.Title = "Leraar ";
     var userName = "";
     var voornaam = "";
     var achternaam= "";
@@ -120,7 +120,7 @@
             </select>
             </div>
             <div class="from-group">
-                <button type="submit" class="btn btn-default">Toevoegen</button>
+                <button type="submit" class="btn btn-default">Registreer</button>
             </div>
         </fieldset>
     </form>
