--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
@@ -31,7 +31,7 @@
     </p>
     <form method="post" class="form-inline">
         <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span> Verwijderen
+            <span class="glyphicon glyphicon-remove"></span> Remove
         </button>
     </form>
 }
