--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingToevoegen.cshtml
@@ -95,6 +95,6 @@
     <input type="datetime" name="dateTime"> <span>Voer getalwijs in als jaar-maand-dagTuur:minuten (YYYY-MM-DDThh:mm / 2016-06-09T10:59)</span><br>
 
     <button type="submit" id="submit" name="voorlichtingToevoegen" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Toevoegen
+        <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
 </form>
