--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingWijzigen.cshtml
@@ -71,7 +71,7 @@
 
     <form method="post" class="form-inline">
         <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span> Verwijderen
+            <span class="glyphicon glyphicon-remove"></span> Remove
         </button>
     </form>
 }
