--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -29,7 +29,7 @@
         <tr>  
             <td>@decaan.Item2</td>
             <td>
-                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Wijzig</a>
+                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Verwijderen</a>
             </td>
         </tr>
     }
