--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -88,7 +88,7 @@
                 @Html.ValidationMessage("confirmPassword")
             </div>
             <div class="from-group" id="floatRight">
-                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>&nbsp; Registreer</button>
+                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>&nbsp; Toevoegen</button>
             </div>
         </fieldset>
     </form>
