--- a/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
@@ -37,7 +37,7 @@
             @if (User.IsInRole("Admin"))
             {
                 <td>
-                    <a href="~/Decaan/Klas/KlasWijzigen?id=@klas.KlasId">Wijzig</a>
+                    <a href="~/Decaan/Klas/KlasWijzigen?id=@klas.KlasId">Verwijderen</a>
                 </td>
             }
         </tr>
