--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
@@ -30,7 +30,7 @@
         <tr>
             <td>@lokaal.LokaalNaam</td>
             <td>@lokaal.Capaciteit</td>
-            <td><a href="~/Decaan/Lokaal/LokaalWijzigen?id=@lokaal.LokaalId">Wijzig</a></td>
+            <td><a href="~/Decaan/Lokaal/LokaalWijzigen?id=@lokaal.LokaalId">Verwijderen</a></td>
         </tr>
         }
     </tbody>
