--- a/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
@@ -30,7 +30,7 @@
         <tr>
             <td>@vak.VakNaam</td>
             <td>@vak.Niveau</td>
-            <td><a href="~/Decaan/Vak/VakWijzigen?id=@vak.VakId">Wijzig</a></td>
+            <td><a href="~/Decaan/Vak/VakWijzigen?id=@vak.VakId">Verwijderen</a></td>
         </tr>
     }
     </tbody>
