--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -63,7 +63,7 @@
                 <div class="modal-footer">
                     <form method="post" class="form-inline">
                     <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder
+            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijderen
         </button>       
                     <button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
                         </form>
