--- a/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
@@ -42,7 +42,7 @@
     </p>
     <form method="post" class="form-inline">
         <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span> Remove
+            <span class="glyphicon glyphicon-remove"></span> Verwijderen
         </button>
     </form>
 }
