--- a/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
@@ -13,6 +13,6 @@
 @if (User.IsInRole("Admin"))
 {
     <a href="~/Admin/Leerling/LeerlingWijzigen?id=@id" class="btn btn-default">
-        <span class="glyphicon glyphicon-pencil"></span> Edit
+        <span class="glyphicon glyphicon-pencil"></span> Verwijderen
     </a>
 }
