--- a/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Leraaroverzicht overzicht";
+    Page.Title = "Leraar overzicht";
 
     if (!User.IsInRole("Admin"))
     {
@@ -30,7 +30,7 @@
         <tr>
             <td>@leraar.Voornaam</td>
             <td>@leraar.Achternaam</td>
-            <td><a href="~/Decaan/Leraar/LeraarWijzigen?id=@leraar.UserId">Wijzig</a></td>
+            <td><a href="~/Decaan/Leraar/LeraarWijzigen?id=@leraar.UserId">Verwijderen</a></td>
         </tr>
         }
     </tbody>
