Fabulous leraar pagina

--- a/ComeniusCarrousel/Leraar/_Leraar.cshtml
+++ b/ComeniusCarrousel/Leraar/_Leraar.cshtml
@@ -1,4 +1,12 @@
 ﻿@*Wordt aangeroepen in default*@
 @{
-    
+    if (!User.IsInRole("Leraar"))
+    {
+        Response.Redirect("~/");
+    }
+
+    int id = WebSecurity.CurrentUserId;
+    LeraarRepo.Leraar leraar = LeraarRepo.GetLeraar(id);
 }
+
+<h3>@leraar.Voornaam @leraar.Achternaam (@leraar.UserName): @leraar.VoorlichtingVak</h3>
